# Distributed_URL_Shortener

./: .dockerignore  Cargo.toml  README.md  docker-compose.yml  dockerfile  haproxy.cfg
frontend/: app.js  cache-metrics-service.js  index.html  styles.css
src/: bootstrap.rs  cache_metrics.rs  domain.rs  events.rs  handlers.rs  main.rs  models.rs  reliability.rs  state.rs  storage.rs
stitch/: DESIGN.md  code.html
