[package]
name = "api_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13"
actix-cors = "0.7"
actix-web = "4"
actix-web-actors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.23", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
once_cell = "1"
env = "1.0.1"
futures-util = "0.3"
